<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/std_color"
        android:gravity="center"
        android:minHeight="60dp" >

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="clicker"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/back_btn" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_back"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/back"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="30dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingRight="5dp"
                        android:text="Hotels in"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_Hotel_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif-condensed"
                        android:freezesText="true"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="Dubai"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tv_checkin_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="03 Mar"
                        android:textColor="@android:color/white"
                        android:textSize="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text=" - "
                        android:textColor="@android:color/white"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tv_checkout_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="05 Mar"
                        android:textColor="@android:color/white"
                        android:textSize="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text=", "
                        android:textColor="@android:color/white"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/tv_room_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingEnd="3dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingStart="3dp"
                        android:text="1"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/room"
                        android:textColor="@android:color/white"
                        android:textSize="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text=", "
                        android:textColor="@android:color/white"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/tv_passenger_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingEnd="3dp"
                        android:paddingRight="3dp"
                        android:text="1"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/guests"
                        android:textColor="@android:color/white"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#757575" />

    <LinearLayout
        android:id="@+id/ll_filter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BDBDBD"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/et_filter_hotel_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/modify_icon"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_clear_name"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="#BDBDBD"
            android:onClick="clicker"
            android:src="@drawable/close_btn"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_map"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/std_color"
            android:clickable="true"
            android:gravity="center"
            android:onClick="clicker"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/location"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/map_view"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_hotel_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:divider="@color/std_color"
            android:dividerHeight="1px"
            android:footerDividersEnabled="false"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_refine_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/ll_currency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:background="@drawable/orange_button_curved_edge"
            android:clickable="true"
            android:gravity="center"
            android:onClick="clicker"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="KWD"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:background="@drawable/orange_button_curved_edge"
            android:clickable="true"
            android:gravity="center"
            android:onClick="clicker" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_sort" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sortby"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:background="@drawable/orange_button_curved_edge"
            android:clickable="true"
            android:gravity="center"
            android:onClick="clicker" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:src="@drawable/filter_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:padding="8dp"
                android:text="@string/filter"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/orange_button_curved_edge"
            android:gravity="center_vertical"
            android:onClick="clicker"
            android:padding="3dp" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/call_to_book"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>